--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -7,7 +7,7 @@
     <label><b>First Name</b></label>
     <input type="text" placeholder="Enter First Name" #firstname required>
     <label><b>Last Name</b></label>
-    <input type="text" placeholder="Enter Last name" #lastname required>
+    <input type="text" placeholder="Enter Last name" #lastname >
     <label><b>Role</b></label>
     <input type="text" placeholder="Enter role" #fkRoleId required>
     <label><b>State</b></label>
